# tech_challenge_fase_03

./: .gitignore  README.md  pyproject.toml  requirements.txt
tech_challenge_fase_03/: .gitignore  README.md  setup.py
tech_challenge_fase_03/data/03_model/: clustering_output.csv
tech_challenge_fase_03/docs/: Makefile  conf.py  index.rst  make.bat
tech_challenge_fase_03/notebooks/: 01_eda.ipynb  02_etl.ipynb  03_feature_engineering.ipynb  04_model_agg_clustering.ipynb  04_model_kmeans.ipynb  04_train_model_agg_clustering.ipynb
tech_challenge_fase_03/src/: app.py
