[project]
name = "tech-challenge-fase-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "yellowbrick>=1.5",
]
